--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
+```json
 {
   "name": "회수금 계산기",
   "short_name": "계산기",
   "description": "간단한 회수금 계산기",
-  "start_url": ".",
+  "start_url": "/returnmoney/",  // GitHub Pages 하위 디렉토리 경로에 맞게 수정
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
