--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "https://placehold.co/180x180/0f172a/fff?text=CC",
+      "src": "/returnmoney/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/180x180/0f172a/fff?text=CC",
+      "src": "/returnmoney/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
